# My-Game

./: git reset
Fight/: CMakeLists.txt  main.cpp
Game/: main.cpp
Inventory/: CMakeLists.txt  main.cpp
NewGame/: Armor.cpp  Armor.h  Boots.cpp  Boots.h  CMakeLists.txt  Character.cpp  Character.h  Core.cpp  Core.h  Dragon.cpp  Dragon.h  Fight.cpp  Fight.h  Gloves.cpp  Gloves.h  Helmet.cpp  Helmet.h  Items.cpp  Items.h  Monster.cpp  Monster.h  Quest.h  Weapon.cpp  Weapon.h  main.cpp  old code.txt
